Spacing and contact box fixed

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -16,6 +16,7 @@
 .aboutext p{
     font-size: var(--Paragraphs);
     color: var(--textParagraphcolor);
+    padding-top: 2%;
 }
 .aboutimg{
    justify-content: center;
