--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -15,12 +15,17 @@
     font-style: normal;
     font-size: 28px;
 }
+#REVIEW3,
+#REVIEW2{
+    display: none;
+}
 .text p{
     font-family: "Alegreya Sans SC", sans-serif;
     font-weight: 500;
     font-style: normal;
     font-size: 15px;
     color: grey;
+    padding-top: 1%;
 }
 //MAin COntainer for containerreview is COLOUMN on mobile
 .containerR{
@@ -29,6 +34,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
+    margin-top: 2%;
 }
 //Secondary container for the REVIEWS CARDS
 .Containerreview{
@@ -71,6 +77,9 @@
     //reduced the size of the cards on desktop
     .Containerreview{
         width:20%;
-
+}
+#REVIEW3,
+#REVIEW2{
+  display: block;
 }
 }
