--- a/src/app/components/service-card/service-card.component.scss
+++ b/src/app/components/service-card/service-card.component.scss
@@ -18,6 +18,7 @@
 //main container for the whole page on  service cards
 //we set it coloum on Mobile
 .ContainerServicesImagesFirstrow{
+    margin-top: 2%;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -34,6 +35,7 @@
   flex-direction:column;
   display: flex;
   margin: 2%;
+
 }
 //images inside the cards
 .images{
